# Unique-Graphics

./: CMakeLists.txt  README.md  opencv_templatematching.md  rasterizer.cpp  rasterizer.h
CMU15462/: MeshEdit.md
GAMES101/Assignment1/: Triangle.cpp  Triangle.h  main.cpp  rasterizer.cpp
GAMES101/Assignment2/: CMakeLists.txt  Triangle.cpp  Triangle.h  global.h  main.cpp  rasterizer.cpp  rasterizer.h
GAMES101/Assignment3/: CMakeLists.txt  OBJ_Loader.h  Shader.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  global.h  main.cpp  rasterizer.cpp  rasterizer.h
GAMES101/Assignment4/: CMakeLists.txt  main.cpp
GAMES101/Assignment5/: CMakeLists.txt  Light.h  Object.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Sphere.h  Triangle.h  Vector.h  global.h  main.cpp
GAMES101/Assignment6/: BVH.cpp  BVH.h  Bounds3.h  CMakeLists.txt  Intersection.h  Material.h  OBJ_Loader.h  Object.h  Ray.h  Renderer.cpp  Sphere.h  Triangle.h  Vector.h  main.cpp
GAMES101/Assignment7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Scene.cpp  Triangle.hpp  binary.ppm
GAMES101/Assignment8/: README.md
GAMES101/Assignment8/src/: application.cpp  rope.cpp
GAMES103/: Lab1_Bunny.unitypackage  Lab2_Cloth_Simulation.unitypackage  Lab3_Bouncy_House.unitypackage  Lab4_Pool_Ripples.unitypackage
Literature Reviews/A Quadratic Bending Model for Inextensible Surfaces/: A Quadratic Bending Model for Inextensible Surface 6152c73edb7d492f884e390e5ea543be.md
Literature Reviews/Animating Developable Surfaces using Nonconforming Elements/: Animating Developable Surfaces using Nonconforming b4bce5ce3d6044c2b3d189cc27b70253.md
Literature Reviews/Meshless Deformations Based on Shape Matching/: Meshless D 0947f.md
